fix nav section css styling so it aligns with the header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,11 +19,15 @@ body {
 header {
     padding: 0 1rem;
     width:100vw;
-    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     text-align: center;
 }
 nav {
-    text-align: right;
+    text-align: center;
+    display: inline-block;
+    list-style: none;
 }
 main {
     flex: 1 0 auto;
